Remove !rights, !status, and !left commands
* The cvnwiki no longer exists, as such the !right command
  was already broken.
  In the future, anything worth logging, use !log instead.
  The "!log" command is handled by a different bot, "stashbot",
  which is as generic service provided for Wikimedia Cloud projects
  that is also present in #countervandalism.

  This means we can remove the wikilog and pywiki dependencies.

* Remove !status and !updatestatus.
  Simply use the channel topic instead. We were already
  not using these much.

* Remove broken and unused !left command.
  This wasn't working because commands take 5 parameters, not 2.
  Causing a python exception previously. Even if it was working,
  it was also missing ops/voice verification, so its kind of
  good that it was broken.
  Move its logic to the "!part" command instead, which is probably
  where it should have been in the first place. Previously,
  "!part" made it leave a channel, but not update the DB.

--- a/TODO
+++ b/TODO
@@ -1,12 +1,5 @@
 
-* Get more variable stuff into config (with option to save to MySQL to preserve
-  it after a restart as well). Live update via "!update" command.
-  - CVNClerkBot.msgs_help
-  - CVNClerkBot.info_help
-  - CVNClerkBot.oplist
-  - CVNClerkBot.voicelist
-
-* Move somewhat static stuff to config file as well (not MySQL):
+* Move somewhat static stuff to a config file (not MySQL):
   - "#cvn-staff"
   - "#cvn-bots"
   - "#countervandalism"
